--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@ footer p{
     <div class="cartao__conteudo">
         <h3>Geografia</h3>
         <div class="cartao__conteudo__pergunta">
-            <p>Qual a capital da França?</p>
+            <p>Qual a capital do Brasil?</p>
         </div>
         <div class="cartao__conteudo__resposta">
-            <p>A capital da França é Paris</p>
+            <p>A capital do Brasil é Brasília</p>
         </div>
     </div>
 </article>
@@ -160,8 +160,8 @@ criaCartao(
 
 criaCartao(
     'Geografia',
-    'Qual a capital da França?',
-    'A capital da França é Paris'
+    'Qual a capital do Brasil?',
+    'A capital do Brasil é Brasília'
 )
 
 criaCartao(
